--- a/README
+++ b/README
@@ -26,7 +26,10 @@ ISSUES
 - K3S token rotation: Changing token requires resetting the cluster 
   GitHub issue: https://github.com/NixOS/nixpkgs/issues/308201
   Cluster upkeep docs: https://github.com/NixOS/nixpkgs/blob/master/pkgs/applications/networking/cluster/k3s/docs/CLUSTER_UPKEEP.md
+- When using sops in NixOS (sops-nix) the 'dotenv' format is written
+  "wholefile" as each key on the host in /run/secret, so not working very well.
 
-TODO: Run Home Assistant.
+TODO: Homeassistant backups should be synced to all nodes.
+TODO: Postgres backups should be synced to all nodes.
+TODO: 3-2-1 backup strategy for (3 copies of data, 2 local, 1 offsite).
 TODO: Setup object storage (persistent outside Kubernetes cluster)
-TODO: 3-2-1 backup strategy (3 copies of data, 2 local, 1 offsite).
