--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 HOMELAB
 
+TODO: Homeassistant backups should be synced to all nodes.
+TODO: Postgres backups should be synced to all nodes.
+TODO: 3-2-1 backup strategy for (3 copies of data, 2 local, 1 offsite).
+TODO: Setup object storage (persistent outside Kubernetes cluster)
+
 This repository contains the configuration for my homelab.
 
 - Machine are running NixOS.
@@ -29,14 +34,9 @@ ISSUES
 - When using sops in NixOS (sops-nix) the 'dotenv' format is written
   "wholefile" as each key on the host in /run/secret, so not working very well.
 
-TODO: Homeassistant backups should be synced to all nodes.
-TODO: Postgres backups should be synced to all nodes.
-TODO: 3-2-1 backup strategy for (3 copies of data, 2 local, 1 offsite).
-TODO: Setup object storage (persistent outside Kubernetes cluster)
-
 INITIAL FLUX SETUP
-1. Bootstrap Flux: GITHUB_TOKEN=$(sops -d --extract '["github_access_token"]' secrets.yaml) flux bootstrap github --owner primalivet --repository homelab --branch main --path ./clusters/production --personal
-2. Setup Flux age private key as a secret: FLUX_AGE_KEY=$(sops -d --extract '["flux_age_private_key"]' secrets.yaml) kubectl create secret generic age.agekey --from-literal=age.agekey="$FLUX_AGE_KEY" --namespace flux-system 
+1. Bootstrap Flux: `GITHUB_TOKEN=$(sops -d --extract '["github_access_token"]' secrets.yaml) flux bootstrap github --owner primalivet --repository homelab --branch main --path ./clusters/production --personal`
+2. Setup Flux age private key as a secret: `sops exec-env secrets.yaml 'kubectl create secret generic -n flux-system sops-age --from-literal age.agekey=$flux_age_private_key'`
 
 ISSUE CERTIFICATES
 1. Create Root CA: `openssl req -x509 -sha256 -days 1825 -newkey rsa:2048 -keyout certs/root-ca-homelab.key -out certs/root-ca-homelab.crt`
@@ -57,3 +57,5 @@ ISSUE CERTIFICATES
    ```
 5. Sing the cerificate with our `root-ca-homelab.crt`:
    `openssl x509 -req -CA certs/root-ca-homelab.crt -CAkey certs/root-ca-homelab.key -in certs/service-homelab.csr -out certs/service-homelab.crt -days 365 -CAcreateserial -extfile certs/service-homelab.ext`
+6. Install the Root CA certificate to your system
+7. Update value in `services/deploy/tls.yaml`
